# HPCCG

./: .gitignore  CMakeLists.txt  HPCCG.hpp  Makefile  ddot.cpp
src/: CMakeLists.txt  ddot.cpp  main.cpp
test/: CMakeLists.txt  test_HPCCG.cpp  test_compute_residual.cpp  test_ddot.cpp  test_generate_matrix.cpp  test_main.cpp  test_make_local_matrix.cpp  test_sparsemv.cpp  test_waxpby.cpp
